# nornir

./: .dockerignore  .flake8  .gitignore  .readthedocs.yml  .travis.yml  :w  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.tests  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yaml  nsot.sh  pyproject.toml  requirements-dev.txt  requirements-pinned.txt  requirements-travis.txt  requirements.txt  setup.cfg  setup.py  test.py  test_async.py  test_file.txt  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  main.yaml
brigade/: __init__.py  easy.py
brigade/core/: __init__.py  brigade.py  configuration.py  exceptions.py  inventory.py  task.py
brigade/core/helpers/: __init__.py  jinja_helper.py
brigade/plugins/functions/: __init__.py
brigade/plugins/inventory/: ansible.py  nsot.py  simple.py
brigade/plugins/tasks/: __init__.py
demo/: Vagrantfile  configure.py  get_facts_grouping.py  get_facts_role.py  get_facts_simple.py  groups.yaml
demo/extra_data/switch00.bma/: interfaces.yaml
demo/extra_data/switch00.cmh/: interfaces.yaml
docs/: Makefile  build_api.sh  conf.py  getting_started.rst  highlighter.py  index.rst  nbval_sanitize.cfg  requirements.txt
docs/_data_templates/: configuration-parameters.j2
docs/_images/: Nornir3_Plugins_v0.drawio
docs/_static/css/: custom.css
docs/api/: brigade.rst  exceptions.rst  index.rst  inventory.rst  nornir.__init__.rst  nornir.init_nornir.rst  task.rst
docs/api/nornir/: __init__.rst  init_nornir.rst
docs/changelog/: index.rst
docs/community/: plugin_list.rst
docs/configuration/: index.rst  parameters.rst
docs/howto/: advanced_filtering.ipynb  basic-napalm-getters.rst  config.yaml  filtering_deep_dive.ipynb  from_runbooks_to_complex_tooling.rst  handling_connections.ipynb  index.rst  inventory.ipynb  ipdb_how_to_inspect_complex_structures.rst  ipdb_how_to_use_it_with_nornir.rst  progress_bar.rst  syntax_highlight_file.py  transforming_inventory_data.ipynb  transforming_inventory_data.rst  use_templates.rst  writing_a_connection_plugin.rst  writing_a_connection_task.rst  writing_a_custom_inventory.rst  writing_a_custom_inventory_plugin.ipynb  writing_a_new_connection_plugin.ipynb
docs/howto/advanced_filtering/: config.yaml
docs/howto/filtering_deep_dive/: config.yaml
docs/howto/handling_connections/: config.yaml
docs/howto/inventory/: defaults.yaml  groups.yaml  hosts.yaml
docs/howto/simple_runbooks/: backup.ipynb  configure.ipynb  get_facts.ipynb  index.rst  rollback.ipynb  validate.ipynb
docs/howto/simple_tooling/: backup.ipynb  configure.ipynb  get_facts.ipynb  index.rst  rollback.ipynb  validate.ipynb
docs/howto/transforming_inventory_data/: config.yaml  helpers.py
docs/howto/writing_a_custom_inventory_plugin/: my_inventory.py
docs/howto/writing_a_new_connection_plugin/: __init__.py  pyproject.toml
docs/inventory/: index.rst
docs/old/: highlighter.py  index.rst
docs/old/changelog/: index.rst
docs/old/contributing/: index.rst
docs/old/howto/: handling_connections.ipynb  progress_bar.rst
docs/old/ref/: index.rst
docs/old/upgrading/: index.rst
docs/plugins/: execution_model.rst  index.rst
docs/plugins/connections/: index.rst
docs/plugins/functions/: text.rst
docs/plugins/inventory/: ansible.rst  index.rst  netbox.rst  nsot.rst  simple.rst
docs/plugins/processors/: index.rst
docs/plugins/tasks/: apis.rst  commands.rst  connections.rst  data.rst  files.rst  index.rst  networking.rst  ntc_rosetta.rst  text.rst  version_control.rst
docs/ref/: index.rst
docs/ref/api/: brigade.rst  configuration.rst  connections.rst  easy.rst  exceptions.rst  index.rst  inventory.rst  nornir.rst  processors.rst  result.rst  scheduler.rst  task.rst
docs/ref/configuration/: index.rst
docs/ref/functions/: index.rst  text.rst
docs/ref/internals/: execution_model.rst  index.rst
docs/ref/inventory/: ansible.rst  index.rst  nsot.rst  simple.rst
docs/ref/tasks/: index.rst  text.rst
docs/tasks/: commands.rst  index.rst  networking.rst
docs/tutorial/: advanced_example.ipynb  config.yaml  failed_tasks.ipynb  index.rst  initializing_nornir.ipynb  install.rst  inventory.ipynb  overview.rst  processors.ipynb  task_results.ipynb  tasks.ipynb
docs/tutorial/inventory/: defaults.yaml
docs/tutorials/intro/: advanced_tasks.ipynb  brigade.rst  config.yaml  executing_tasks.ipynb  explore.rst  failed_tasks.ipynb  grouping_tasks.ipynb  index.rst  initializing_brigade.ipynb  initializing_nornir.ipynb  install.rst  inventory.ipynb  inventory.rst  overview.rst  processors.ipynb  python.rst  run.rst  running_tasks.rst  running_tasks_errors.rst  (+3 more)
docs/upgrading/: 1_to_2.rst  2_to_3.rst
examples/: groups.yaml  highlighter.py  hosts.yaml  network_diagram.graffle
examples/1_simple_runbooks/: backup.ipynb  backup.py  configure.ipynb  configure.py  get_facts.ipynb  get_facts.py  rollback.ipynb  rollback.py  validate.ipynb  validate.py
examples/2_simple_tooling/: backup.ipynb  backup.py  configure.ipynb  configure.py  get_facts.ipynb  get_facts.py  rollback.ipynb  rollback.py  validate.ipynb  validate.py
examples/3_advanced_tooling/: mate.py
examples/backup/: backup.py
examples/configure/: configure.py  log
examples/get_facts/: get_facts.py
examples/inventory/: Vagrantfile  groups.yaml
nornir/: __init__.py  init_nornir.py
nornir/core/: __init__.py  configuration.py  connections.py  exceptions.py  filter.py  filter_parser.py  inventory.py  processor.py  result.py  scheduler.py  serializer.py  state.py  task.py
tests/: __init__.py  conftest.py  wrapper.py
tests/core/: test_InitBrigade.py  test_InitNornir.py  test_configuration.py  test_connections.py  test_filter.py  test_filter_parser.py  test_format_object.py  test_from_conf.py  test_inventory.py  test_inventory_data.py  test_multithreading.py  test_pickle.py  test_processors.py  test_registered_plugins.py  test_tasks.py
tests/inventory_data/: containers.sh  defaults.yaml  external_hosts.yaml  groups.yaml  hosts.yaml  hosts_conn.yaml  netconf_hosts.yaml
tests/profile/: script.py
(+432 files in other folders)
