[build-system]
requires = ["poetry==1.3.2"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."nornir.plugins.runners"]
"serial" = "nornir.plugins.runners:SerialRunner"
"threaded" = "nornir.plugins.runners:ThreadedRunner"

[tool.poetry.plugins."nornir.plugins.inventory"]
"SimpleInventory" = "nornir.plugins.inventory.simple:SimpleInventory"

[tool.poetry]
name = "nornir"
version = "3.4.0"
description = "Pluggable multi-threaded framework with inventory management to help operate collections of devices"
authors = ["David Barroso <dbarrosop@dravetech.com>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/nornir-automation/nornir"
classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
"ruamel.yaml" = ">=0.17"
# importlib.metadata has an API change in 3.10 and is no longer provisional
importlib-metadata = { version = "^4", python = "<3.10" }

[tool.poetry.group.dev.dependencies]
decorator = "*"
nbval = "^0.10.0"
pytest = "*"
pytest-cov = "*"
pylama = "*"
requests-mock = "*"
black = "^23.7.0"
mypy = "^1.5.1"
mypy_extensions = "^1.0.0"
types-Jinja2 = "^2.11.9"
types-pkg-resources = "^0.1.3"
typing_extensions = "^4.7.1"
nornir-jinja2 = "0.2.0"
nornir-utils = "0.2.0"
nornir-napalm = "0.4.0"

[tool.poetry.group.docs.dependencies]
sphinx = "6.2.1"
sphinx_rtd_theme = "1.2.2"
sphinxcontrib-napoleon = "^0.7"
jupyter = "1.0.0"
nbsphinx = "0.9.2"
pygments = "2.16.1"
sphinx-issues = "3.0.1"

