[tool.poetry]
name = "nornir_demo"
version = "0.1.0"
description = "Nornir demo connection plugin"
authors = ["Jane Doe <jane@doe.loc>"]
license = "Apache-2.0"

[tool.poetry.plugins."nornir.plugins.connections"]
"nornir_demo.demo" = "nornir_demo.connections:Demo"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
